--- a/src/html/Ataque.html
+++ b/src/html/Ataque.html
@@ -28,9 +28,10 @@
                    <dd> Dor ou desconforto na região peitoral, podendo irradiar para as costas, rosto, braço esquerdo e, raramente, o braço direito.  </dd> 
                    <dd> Podem ser acompanhados de suor excessivo, palidez e alteração na frequência cardíaca. </dd> 
                    <dd> Em idosos, o principal sintoma pode ser a falta de ar ou dor também pode ser no abdome, semelhante à dor de uma gastrite ou esofagite de refluxo. </dd> 
+                   <dd> Ao identificar os sintomas de um ataque cardíaco o ideal é acionar o serviço de urgência de referência o mais breve possível.  
+                   <dt>  Fonte: Manual de Primeiros Socorros, Fundação Oswaldo Cruz.</dt>  </dd>
                 </dl> 
-            <dl> Ao identificar os sintomas de um ataque cardíaco o ideal é acionar o serviço de urgência de referência o mais breve possível. 
-             <dt>  Fonte: Manual de Primeiros Socorros, Fundação Oswaldo Cruz.</dt> </dl>
+
                  </p>
             </div>
         </div>
