--- a/src/html/relatorioglicemia.html
+++ b/src/html/relatorioglicemia.html
@@ -99,7 +99,7 @@
                             <input type="date" class="form-control" id="produto-date" required>
                         </div>
                         <div class="form-group">
-                            <label for="produto-time" class="col-form-label">Valor:</label>
+                            <label for="produto-time" class="col-form-label">Hora:</label>
                             <input type="time"  class="form-control" id="produto-time" required>
                         </div>
                         <div class="form-group">
@@ -116,6 +116,6 @@
         </div>
     </div>
 
-    <script src="main.js"></script>
+    <script src="../js/main.js"></script>
 </body>
 </html>
