--- a/src/html/relatorioglicemia.html
+++ b/src/html/relatorioglicemia.html
@@ -108,7 +108,7 @@
                         </div>
                         <div class="modal-footer">
                             <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
-                            <button type="submit" class="btn btn-primary">Salvar</button>
+                            <button id="Salvar" class="btn btn-primary">Salvar</button>
                         </div>
                     </form>
                 </div>
