--- a/src/html/relatorioglicemia.html
+++ b/src/html/relatorioglicemia.html
@@ -89,7 +89,7 @@
                     </button>
                 </div>
                 <div class="modal-body">
-                    <form id="produto-form" method="post" action="">
+                    <form id="produto-form">
                         <div class="form-group">
                             <label for="produto-id" class="col-form-label">Código:</label>
                             <input type="number" class="form-control" id="produto-id" min="1" required>
@@ -108,7 +108,7 @@
                         </div>
                         <div class="modal-footer">
                             <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
-                            <button id="Salvar" class="btn btn-primary">Salvar</button>
+                            <button id="Salvar" type="button" class="btn btn-primary">Salvar</button>
                         </div>
                     </form>
                 </div>
