--- a/src/html/relatorioglicemia.html
+++ b/src/html/relatorioglicemia.html
@@ -52,6 +52,7 @@
                 </table>
             </div>
         </div>
+        <div id="curve_chart" style="width: 900px; height: 500px"></div>
     </div>
 
     <!--
@@ -116,6 +117,7 @@
         </div>
     </div>
 
+    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
     <script src="../js/main.js"></script>
 </body>
 </html>
